--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 antlr4-python3-runtime==4.9.3
 certifi==2023.11.17
 charset-normalizer==3.3.2
+coloredlogs==15.0.1
+humanfriendly==10.0
 idna==3.6
 pytz==2023.3.post1
-requests==2.31.0
+requests==2.32.3
 simplejson==3.19.2
 six==1.16.0
 stix2==3.0.1
 stix2-patterns==2.0.0
-urllib3==2.1.0
+urllib3==2.2.2
